// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`descendantsFromRender > should break paragraphs at LineBreak tags 1`] = `
[
  {
    "children": [
      {
        "text": "This is a test.",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "With two paragraphs.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender > should join a space element to text element 1`] = `
[
  {
    "children": [
      {
        "text": "Test ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender > should render a single-level condition 1`] = `
[
  {
    "children": [
      {
        "text": "This is a test ",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "",
      },
    ],
    "position": 1,
    "subTree": {
      "children": [
        {
          "children": [
            {
              "children": [],
              "data": {
                "tag": "String",
                "value": "with an If",
              },
            },
          ],
          "data": {
            "if": "testVariable",
            "tag": "Statement",
          },
        },
        {
          "children": [
            {
              "children": [],
              "data": {
                "tag": "String",
                "value": "and an Else",
              },
            },
          ],
          "data": {
            "tag": "Fallthrough",
          },
        },
      ],
      "data": {
        "tag": "If",
      },
    },
    "type": "ifWrapper",
  },
  {
    "children": [
      {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender > should render a space after a link in a second paragraph 1`] = `
[
  {
    "children": [
      {
        "text": "Test",
      },
    ],
    "type": "paragraph",
  },
  {
    "children": [
      {
        "text": "Another ",
      },
      {
        "children": [
          {
            "text": "test",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      {
        "text": " ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender > should return a text description 1`] = `
[
  {
    "children": [
      {
        "text": "This is a test ",
      },
      {
        "children": [
          {
            "text": "with a link",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should break paragraphs at LineBreak tags 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test.",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "With two paragraphs.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should join a space element to text element 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "Test ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should render a single-level condition 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test ",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "",
      },
    ],
    "position": 1,
    "subTree": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "with an If",
              },
            },
          ],
          "data": Object {
            "if": "testVariable",
            "tag": "Statement",
          },
        },
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "and an Else",
              },
            },
          ],
          "data": Object {
            "tag": "Fallthrough",
          },
        },
      ],
      "data": Object {
        "tag": "If",
      },
    },
    "type": "ifWrapper",
  },
  Object {
    "children": Array [
      Object {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should render a space after a link in a second paragraph 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "Test",
      },
    ],
    "type": "paragraph",
  },
  Object {
    "children": Array [
      Object {
        "text": "Another ",
      },
      Object {
        "children": Array [
          Object {
            "text": "test",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      Object {
        "text": " ",
      },
    ],
    "type": "paragraph",
  },
]
`;

exports[`descendantsFromRender should return a text description 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "text": "This is a test ",
      },
      Object {
        "children": Array [
          Object {
            "text": "with a link",
          },
        ],
        "to": "testFeature",
        "type": "featureLink",
      },
      Object {
        "text": " and more text.",
      },
    ],
    "type": "paragraph",
  },
]
`;
